--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link href="css/hover.css" rel="stylesheet" media="all">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <link rel="shortcut icon" href="pics/logo.ico" />
+
+
 </head>
 
 <body>
