--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="menu">
           <ul id="navbar-col">
-            <li><a href="#" class="hvr-grow">Mengenai Sekolah</a></li>
+            <li><a href="pages/mengenai-sekolah.html" class="hvr-grow">Mengenai Sekolah</a></li>
             <li><a href="#" class="hvr-grow">Aktiviti Sekolah</a></li>
             <li><a href="#" class="hvr-grow">Takwim Sekolah</a></li>
             <li><a href="#" class="hvr-grow">Hubungi</a></li>
