--- a/pages/mengenai-sekolah.html
+++ b/pages/mengenai-sekolah.html
@@ -43,7 +43,7 @@
     <!-- MENGENAI -->
     <div class="info">
       <h1>Mengenai Sekolah</h1><br>
-      <<img src="../pics/oldschool.png" alt="Old Picture of School"><br><br>
+      <img src="../pics/oldschool.png" alt="Old Picture of School" class="oldpicschool"><br><br>
       <p>Sekolah St. Francis didirikan oleh Rev. Fr. Deloutte, MEP pada 5 hb. April 1880 atas permintaan para jemaah Gereja St. Francis. Para jemaah gereja ini menghantar anak perempuan mereka ke Sekolah Convent of The Holy Infant Jesus yang
         didirikan 20 tahun lebih awal, tetapi mereka menghadapi masalah dengan persekolahan anak lelaki mereka yang tidak dapat didaftarkan di Sekolah Tinggi Melaka yang berdekatan.
 
