--- a/pages/blank.html
+++ b/pages/blank.html
@@ -7,11 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>SMK St. Francis</title>
   <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
-  <link rel="stylesheet" href="css/index_style.css">
-  <link href="css/hover.css" rel="stylesheet" media="all">
+  <link rel="stylesheet" href="../css/mengenai.css">
+  <link href="../css/hover.css" rel="stylesheet" media="all">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-  <link rel="shortcut icon" href="pics/logo.ico" />
+  <link rel="shortcut icon" href="../pics/logo.ico" />
 
 
 </head>
@@ -24,22 +24,25 @@
           <i class="fa fa-bars fa-2x"></i>
         </div>
         <div class="logo">
-          <img src="pics/logo-sek.png" id="logo_sek" />
+          <img src="../pics/logo-sek.png" id="logo_sek" />
         </div>
         <div class="name">
           <p>SMK St. Francis</p>
         </div>
         <div class="menu">
           <ul id="navbar-col">
-            <li><a href="pages/mengenai-sekolah.html" class="hvr-grow">Mengenai Sekolah</a></li>
+            <li><a href="#" class="hvr-grow">Mengenai Sekolah</a></li>
             <li><a href="#" class="hvr-grow">Aktiviti Sekolah</a></li>
-            <li><a href="pages/takwim.html" class="hvr-grow">Takwim Sekolah</a></li>
+            <li><a href="#" class="hvr-grow">Takwim Sekolah</a></li>
             <li><a href="#" class="hvr-grow">Hubungi</a></li>
             <li><a href="#" class="hvr-grow">Galeri</a></li>
           </ul>
         </div>
       </nav>
     </header>
+
+<!-- CONTENT GOES HERE -->
+
     <script type="text/javascript">
       // Menu-toggle button
       $(document).ready(function() {
