--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div class="menu">
           <ul id="navbar-col">
             <li><a href="pages/mengenai-sekolah.html" class="hvr-grow">Mengenai Sekolah</a></li>
-            <li><a href="#" class="hvr-grow">Aktiviti Sekolah</a></li>
+            <li><a href="pages/aktiviti.html" class="hvr-grow">Aktiviti Sekolah</a></li>
             <li><a href="pages/takwim.html" class="hvr-grow">Takwim Sekolah</a></li>
-            <li><a href="#" class="hvr-grow">Hubungi</a></li>
-            <li><a href="#" class="hvr-grow">Galeri</a></li>
+            <li><a href="pages/hubungi.html" class="hvr-grow">Hubungi</a></li>
+            <li><a href="pages/galeri.html" class="hvr-grow">Galeri</a></li>
           </ul>
         </div>
       </nav>
