--- a/pages/galeri.html
+++ b/pages/galeri.html
@@ -55,47 +55,47 @@
   <div class="container">
     <div class="col-lg-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="../pics/garden.jpg">
+					<img src="https://i.imgur.com/hl1W46x.jpg">
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="../pics/garden.jpg">
+					<img src="https://i.imgur.com/hl1W46x.jpg">
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="../pics/garden.jpg">
+					<img src="https://i.imgur.com/hl1W46x.jpg">
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="../pics/garden.jpg">
+					<img src="https://i.imgur.com/hl1W46x.jpg">
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="../pics/garden.jpg">
+					<img src="https://i.imgur.com/hl1W46x.jpg">
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="../pics/garden.jpg">
+					<img src="https://i.imgur.com/hl1W46x.jpg">
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="../pics/garden.jpg">
+					<img src="https://i.imgur.com/hl1W46x.jpg">
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="../pics/garden.jpg">
+					<img src="https://i.imgur.com/hl1W46x.jpg">
 				</div>
 			</div>
 			<div class="col-lg-4 col-sm-6">
 				<div class="thumbnail">
-					<img src="../pics/garden.jpg">
+					<img src="https://i.imgur.com/hl1W46x.jpg">
 				</div>
 			</div>
   </div>
